2005-09-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ApplicationHostTest.cs: disabled a test.

2005-09-21  Sebastien Pouliot  <sebastien@ximian.com> 

	* SimpleWorkerRequestTest.cs: When in doubt write more tests...

2005-09-18  Sebastien Pouliot  <sebastien@ximian.com> 

	* SimpleWorkerRequestTest.cs: Ensure a trailing / in the expected path
	as GetAppPathTranslated must have one (while most directory methods
	don't append one).

2005-09-13  Sebastien Pouliot  <sebastien@ximian.com>

	* SimpleWorkerRequestTest.cs: Added a test case (GetUriPath) that was 
	failing in the CAS tests (but wasn't CAS related).
	* SimpleWorkerRequestCas.cs: Ignore the ctor(string,string,TextWriter)
	test as I don't have a working test case. Simplify GetUriPath check
	so it doesn't fail.

2005-09-10  Sebastien Pouliot  <sebastien@ximian.com>

	* AppDomainFactoryCas.cs: New. CAS unit tests for AppDomainFactory.
	* ApplicationHostCas.cs: New. CAS unit tests for ApplicationHost.
	* ISAPIRuntimeCas.cs: New. CAS unit tests for ISAPIRuntime.
	* SimpleWorkerRequestCas.cs: New. CAS unit tests for 
	SimpleWorkerRequest.
	* SimpleWorkerRequestTest.cs: Added a few (unworking) test cases for
	GetPathInfo method.

2005-08-22  Chris Toshok  <toshok@ximian.com>

	* SimpleWorkerRequestTest.cs (Host): make cwd =
	"Environment.CurrentDirectory + Path.DirectorySeparatorChar" so we
	pass on MS.

2005-08-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* SimpleWorkerRequestTest.cs: add 2 more assertions.
	* ApplicationHostTest.cs: fix test for the path of web.config.

2005-07-27  Miguel de Icaza  <miguel@novell.com>

	* SimpleWorkerRequestTest.cs: Do not use the "/tmp" directory as
	that makes the tests fail if we create a hosted
	SimpleWorkerRequest.

	Instead use the current directory, and before starting up, create
	a bin directory and copy the assembly there to allow us to create
	a host.

	Also, replicate the tests for when we are hosted in a new